crates/pixi_config/src/snapshots/pixi_config__tests__config_merge.snap
---
source: crates/pixi_config/src/lib.rs
expression: debug
---
Config {
    default_channels: [
        Name(
            "conda-forge",
        ),
        Name(
            "bioconda",
        ),
        Name(
            "defaults",
        ),
    ],
    change_ps1: Some(
        true,
    ),
    authentication_override_file: None,
    tls_no_verify: Some(
        false,
    ),
    mirrors: {},
    pinning_strategy: None,
    loaded_from: [
        "path/config_1.toml",
        "path/config_2.toml",
    ],
    channel_config: ChannelConfig {
        channel_alias: Url {
            scheme: "https",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Domain(
                    "conda.anaconda.org",
                ),
            ),
            port: None,
            path: "/",
            query: None,
            fragment: None,
        },
        root_dir: "/root/dir",
    },
    repodata_config: RepodataConfig {
        default: RepodataChannelConfig {
            disable_jlap: Some(
                true,
            ),
            disable_bzip2: None,
            disable_zstd: Some(
                true,
            ),
            disable_sharded: None,
        },
        per_channel: {},
    },
    pypi_config: PyPIConfig {
        index_url: None,
        extra_index_urls: [],
        keyring_provider: None,
    },
    detached_environments: Some(
        Boolean(
            true,
        ),
    ),
}
