crates/pixi_config/src/snapshots/pixi_config__tests__version_constraints.snap
---
source: crates/pixi_config/src/lib.rs
expression: results
---
### Strategy: 'Semver'
>=1.2.3,<2 from 1.2.3
>=0.0.0,<0.0.1 from 0.0.0
>=1!1,<1!2 from 1!1
>=1!0.0.0,<1!0.0.1 from 1!0.0.0
>=1.2.3a1,<2 from 1.2.3a1
>=1.2.3a1,<2 from 1.2.3a1, 1.2.3
>=1.2.3a1,<10001 from 1.2.3, 1.2.3a1, 1.2.3b1, 1.2.3rc1, 2, 10000
>=1.2.0,<2 from 1.2.0, 1.3.0
>=0.2.0,<0.4 from 0.2.0, 0.3.0
>=0.2.0,<2 from 0.2.0, 1.3.0
>=1.2,<2 from 1.2
>=1.2,<3 from 1.2, 2
>=1.2,<1!3 from 1.2, 1!2.0
>=24.2,<25 from 24.2

### Strategy: 'Major'
>=1.2.3,<2 from 1.2.3
>=0.0.0,<1 from 0.0.0
>=1!1,<1!2 from 1!1
>=1!0.0.0,<1!1 from 1!0.0.0
>=1.2.3a1,<2 from 1.2.3a1
>=1.2.3a1,<2 from 1.2.3a1, 1.2.3
>=1.2.3a1,<10001 from 1.2.3, 1.2.3a1, 1.2.3b1, 1.2.3rc1, 2, 10000
>=1.2.0,<2 from 1.2.0, 1.3.0
>=0.2.0,<1 from 0.2.0, 0.3.0
>=0.2.0,<2 from 0.2.0, 1.3.0
>=1.2,<2 from 1.2
>=1.2,<3 from 1.2, 2
>=1.2,<1!3 from 1.2, 1!2.0
>=24.2,<25 from 24.2

### Strategy: 'Minor'
>=1.2.3,<1.3 from 1.2.3
>=0.0.0,<0.1 from 0.0.0
>=1!1,<1!1.1 from 1!1
>=1!0.0.0,<1!0.1 from 1!0.0.0
>=1.2.3a1,<1.3 from 1.2.3a1
>=1.2.3a1,<1.3 from 1.2.3a1, 1.2.3
>=1.2.3a1,<10000.1 from 1.2.3, 1.2.3a1, 1.2.3b1, 1.2.3rc1, 2, 10000
>=1.2.0,<1.4 from 1.2.0, 1.3.0
>=0.2.0,<0.4 from 0.2.0, 0.3.0
>=0.2.0,<1.4 from 0.2.0, 1.3.0
>=1.2,<1.3 from 1.2
>=1.2,<2.1 from 1.2, 2
>=1.2,<1!2.1 from 1.2, 1!2.0
>=24.2,<24.3 from 24.2

### Strategy: 'ExactVersion'
==1.2.3 from 1.2.3
==0.0.0 from 0.0.0
==1!1 from 1!1
==1!0.0.0 from 1!0.0.0
==1.2.3a1 from 1.2.3a1
==1.2.3a1|==1.2.3 from 1.2.3a1, 1.2.3
==1.2.3|==1.2.3a1|==1.2.3b1|==1.2.3rc1|==2|==10000 from 1.2.3, 1.2.3a1, 1.2.3b1, 1.2.3rc1, 2, 10000
==1.2.0|==1.3.0 from 1.2.0, 1.3.0
==0.2.0|==0.3.0 from 0.2.0, 0.3.0
==0.2.0|==1.3.0 from 0.2.0, 1.3.0
==1.2 from 1.2
==1.2|==2 from 1.2, 2
==1.2|==1!2.0 from 1.2, 1!2.0
==24.2 from 24.2

### Strategy: 'LatestUp'
>=1.2.3 from 1.2.3
>=0.0.0 from 0.0.0
>=1!1 from 1!1
>=1!0.0.0 from 1!0.0.0
>=1.2.3a1 from 1.2.3a1
>=1.2.3a1 from 1.2.3a1, 1.2.3
>=1.2.3a1 from 1.2.3, 1.2.3a1, 1.2.3b1, 1.2.3rc1, 2, 10000
>=1.2.0 from 1.2.0, 1.3.0
>=0.2.0 from 0.2.0, 0.3.0
>=0.2.0 from 0.2.0, 1.3.0
>=1.2 from 1.2
>=1.2 from 1.2, 2
>=1.2 from 1.2, 1!2.0
>=24.2 from 24.2

### Strategy: 'NoPin'
* from 1.2.3
* from 0.0.0
* from 1!1
* from 1!0.0.0
* from 1.2.3a1
* from 1.2.3a1, 1.2.3
* from 1.2.3, 1.2.3a1, 1.2.3b1, 1.2.3rc1, 2, 10000
* from 1.2.0, 1.3.0
* from 0.2.0, 0.3.0
* from 0.2.0, 1.3.0
* from 1.2
* from 1.2, 2
* from 1.2, 1!2.0
* from 24.2
